BUG#17521 alter database crashes slave Problem was a null pointer Fixed by passing correct database name to slave filtering mechanism Added test.

sql/sql_parse.cc:
  Fix slave crash when issuing 'ALTER DATABASE' with specifying db name
  Don't pass null pointer to db_ok_with_wild_table()